Upgraded to handle junit test